[package]
name = "ecliptic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
image = "0.25.1"
log = "0.4.21"
nalgebra = "0.32.5"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.64", features = ["Document", "Window", "Element"] }
wgpu = { version = "0.18.0", features = ["webgl"] }
winit = { version = "0.29.15", features = ["rwh_04", "rwh_05"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
